# zero_cost

./: .gitignore  Abstract.md  analysis_results.md  justfile
c/: filehandle.asm  filehandle.c  filehandle.h  filehandle_unsafe.asm  filehandle_unsafe.c  filehandle_unsafe.h  justfile  main.c  main_unsafe.c
paper/: .gitignore  README.md  abstract.md  justfile  literature.bib  main.md  main.tex  pyproject.toml
paper/puml/: concept.puml  make_dias.sh  spectrum.puml  state-machine.puml  state-machine_no_notes.puml  terminalKanban.puml
paper/scripts/: collect_metrics.py  generate_graphs.py  metrics.csv
poster/: beamercolorthemeuchicago.sty  beamerthemegemini.sty  justfile  main.tex  poster.bib  posterbib2.bib
poster/logos/: rugr_logoen_wit_rgb.eps
poster/svg-inkscape/: THWS_svg-tex.pdf_tex  simple_spectrum_svg-tex.pdf_tex
rust/: Cargo.toml  justfile  libfilehandle.asm  rustfmt.toml
rust/src/: lib.rs  main.rs
scripts/: collect_metrics.py  create_overhead_graph.py
